<resources>
    <string name="app_name">Lab6</string>
    <string name="settings">Settings</string>

    <string name="title_activity_settings_test">Настройки</string>

    <string name="pref_switch_key">enableTorch</string>
    <string name="pref_switch_title">Фонарик</string>
    <string name="pref_switch_description">Включение фонарика</string>

    <string name="pref_edit_key">editName</string>
    <string name="pref_edit_title">Имя</string>
    <string name="pref_edit_default">Наташа</string>

    <string name="pref_check_key">enableVibration</string>
    <string name="pref_check_title">Вибрация</string>

    <string name="pref_list_title">Город</string>
    <string name="pref_list_key">selectCity</string>
    <string-array name="pref_list_titles">
        <item>Москва</item>
        <item>Санкт-Петербург</item>
        <item>Тверь</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>msk</item>
        <item>spb</item>
        <item>tvr</item>
    </string-array>




</resources>
