<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/pref_switch_key"
        android:summary="@string/pref_switch_description"
        android:title="@string/pref_switch_title"/>

    <EditTextPreference
        android:defaultValue="@string/pref_edit_default"
        android:key="@string/pref_edit_key"
        android:title="@string/pref_edit_title"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:title="@string/pref_check_title"
        android:key="@string/pref_check_key"
        />

    <ListPreference
        android:defaultValue="msk"
        android:entries="@array/pref_list_titles"
        android:entryValues="@array/pref_list_values"
        android:key="@string/pref_list_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_list_title"/>

</PreferenceScreen>